:art:Fixed spacing on mobile.

--- a/assets/src/sass/components/_release.scss
+++ b/assets/src/sass/components/_release.scss
@@ -28,5 +28,9 @@
   box-shadow: 0 0 60px #ffffff,
   0 0 20px #ffffff;
 }
+.amazonlogo {
+  font-size: 3.50rem;
+  line-height: 1;
+}
 
 
